# HIKARI_BOT_NEO

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  PRIVACY_POLICY.md  README.md  USER_AGREEMENT.md  bot.py  deploy.ps1  docker-compose.yml  docker-deploy.cmd  docker-deploy.ps1  docker-deploy.sh  hikari-bot-neo.service  install.ps1  install.sh  pyproject.toml
BotData/: config.example.json
UserData/: temp_media_cleanup.json
composers/: astrbot.docker-compose.yml  cobalt.docker-compose.yml  napcat.docker-compose.yml
core/: access_control.py  activity_tracker.py  ai_tool_registry.py  bot_identity.py  bot_messages.py  command_router.py  config_loader.py  error_notifier.py  lifecycle_logging.py  logger_setup.py  message_collector.py  message_pipeline.py  ncm_decrypt.py  rendering.py  resources.py  runtime_info.py  stats_tracker.py  temp_media_cleaner.py
deploy/: docker-compose.server.yml
docker/: entrypoint.sh
docs/: API.md  bilibili-parser-principles.md  douyin-parser-principles.md  kuaishou-parser-principles.md  pixiv-parser-principles.md  weibo-parser-principles.md  xiaohongshu-parser-principles.md
plugins/: sticker_inbox.py  sticker_library.py  voice_library.py
sample_src/: pixiv_parser.py
scripts/: update_media_parser_vendor.ps1  update_version_file.py
tests/: test_about_bot.py  test_ai_news.py  test_aiagent_config.py  test_aiagent_plugin_tools.py  test_aiagent_tools.py  test_astrbot_compat.py  test_bot_admin_aiagent_tools.py  test_bot_admin_auth.py  test_bot_help.py  test_bot_identity_pages.py  test_bot_messages.py  (+15 more)
(+223 files in other folders)
