[project]
name = "HIKARI_BOT_NEO"
version = "0.1.0"
description = "NoneBot QQ Bot - HikariBotNeo"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.10, <4.0"
dependencies = [
    "nonebot2[websockets]>=2.5.0",
    "nonebot-adapter-onebot>=2.4.6",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "cryptography>=42.0.0",
    "pillow>=10.0.0",
    "jmcomic>=2.7.0",
    "img2pdf>=0.6.3",
    "lottie>=0.7.2",
    "cairosvg>=2.9.0",
    "yt-dlp[default]>=2026.6.9",
    "deno>=2.9.0",
    "werkzeug>=3.0",
]

[tool.nonebot]
plugin_dirs = ["plugins"]
builtin_plugins = []

[tool.nonebot.adapters]
nonebot-adapter-onebot = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
]

[tool.nonebot.plugins]
"@local" = []
